--- a/config.json
+++ b/config.json
@@ -12,7 +12,7 @@
 	"antiInbox": false,
 	"language": "en",
 	"notesLanguage": "change to your language with ISO 639-1 code, available languages: vi (Vietnamese), en (English)",
-	"nickNameBot": "Lvy Pookie💗",
+	"nickNameBot": "Lvy Pookie",
 	"prefix": "/",
 	"adminOnly": {
 		"enable": false,
